# genesis-forge

./: .gitignore  README.md  observation_reference.py  pyproject.toml
docs/api/managers/: actuator.md  index.md  noisy_value.md
docs/guide/: quick_start.md
docs/guide/managers/: action.md  actuator.md  index.md
examples/: README.md
examples/command_direction/: environment.py  eval.py  gamepad.py
examples/contacts/: environment.py  eval.py
examples/domain_randomization/: README.md  environment.py  eval.py  train.py
examples/gait_trainer/: environment.py  gait_command_manager.py  gamepad.py  train.py
examples/multiple_action_managers/: README.md  environment.py  eval.py  train.py
examples/new_simple/: environment.py  eval_fixed.py  train.py  trained.mov
examples/rough_terrain/: environment.py  eval.py
examples/simple/: environment.py  eval.py  eval_deploy.py  eval_deploy_generic.py  eval_deploy_ros2.py  ros2_interface.py
examples/skrl/: README.md  environment.py  eval.py  train.py
examples/skrl_with_sensors/: environment.py  train.py
genesis_forge/: __init__.py  genesis_env.py  genesis_managed_env.py  managed_env.py  ros2_env.py  ros2_managed_env.py  utils.py
genesis_forge/managers/: __init__.py  base.py  entity_manager.py  observation_manager.py  reward_manager.py  termination_manager.py  terrain_manager.py
genesis_forge/managers/action/: __init__.py  base.py  force_action_manager.py  force_within_limits.py  hybrid_action_manager.py  position_action_manager.py  position_within_limits.py  velocity_action_manager.py
genesis_forge/managers/actuator/: __init__.py  (+2 more)
genesis_forge/mdp/: observations.py  reset.py  rewards.py  terminations.py
genesis_forge/values/: __init__.py  dof_value.py
genesis_forge/wrappers/: rsl_rl.py  video.py  wrapper.py
(+21 files in other folders)
