[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "genesis-forge"
version = "0.3.0"
authors = [{ name = "Jeremy Gillick" }]
description = "A robotics RL training framework for Genesis inspired by Isaac Lab and Gymnasium."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "genesis-world>=0.3.4",
  "gymnasium",
  "deprecated",
  "hidapi",
  "skrl[torch]",
  "torch",
  "tensordict",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/jgillick/genesis-forge"
Issues = "https://github.com/jgillick/genesis-forge/issues"

[tool.hatch.build.targets.sdist]
exclude = ["Makefile", "docs/", ".readthedocs.yaml", "*.mp4", "*.xcf"]
